# Simple_OBJ_Converter

./: CMakeLists.txt  DD_MeshUtility.h  DD_ObjConverter.cpp  DD_ObjConverter.h  Makefile  Pow2Assert.h  README.md  main_OC.cpp
include/: DD_Container.h  DD_Strings.h
src/: DD_ObjConverter.cpp
